
     * The "props" and "edit" command have been unified into a single
     "config" command that both shows and displays configuration
     properties.  To set the default stack, there is a new "default"
     command.  If using a local repository, you'll need to upgrade
     to Pinto-0.066 or newer.  If using a remote repository, you
     shouldn't need to upgrade Pinto::Remote.

     Interface Changes:

     * Stack and repository configuration properties are once again
     forced to lowercase.  After some debate, I decided that this
     was just more user friendly.  However, stack names are still
     case-preserving but case-insensitive.

0.054     2012-11-12 13:22:33 America/Los_Angeles

     New Commands:

     * The "rename" command allows you to change the name of an
     existing stack.  Say 'pinto manual rename' for details. This
     requires Pinto-0.063 or later.

     New Features:

     * Commands that support the --message option also now have a
     --use-default-message (or -M) option, which causes Pinto to use
     the default log message that it generates for each command.  This
     saves you the trouble of having to save and close the default
     message in your text editor.  Requires Pinto-0.062 or later.
 
0.053     2012-10-22 12:39:01 America/Los_Angeles

     The 'new' and 'copy' commands now have a '--default' option for
     setting the default stack at the same time.  This is most useful
     for setting the default stack after creating a new stack in a
     bare repository.

0.052     2012-10-20 00:00:34 America/Los_Angeles

     Added the 'blame' command, which shows who was the last person
     to modify a package in the stack (by either adding, pinning,
     or unpinning it).  Requires Pinto-0.059 or later.

     Stack names and property names are no longer forced to lower-case.
     Instead, the case will be preserved but any lookups or comparisons
     will not be case sensitive.
